Add button back to home

--- a/site/list.html
+++ b/site/list.html
@@ -12,6 +12,8 @@
     <script type="module" src="/components/header/header-component.js"></script>
     <script type="module" src="/components/footer/footer-component.js"></script>
     <script type="module" src="/components/caret-icon/caret-icon-component.js"></script>
+    <script type="module" src="/components/house-icon/house-icon-component.js"></script>
+
 
     <script type="text/javascript" src="/scripts/list.js"></script>
 </head>
@@ -40,7 +42,7 @@
                 </div>
                 <div id="by-album-list">
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold">5x20 All the BEST!! 1999-2019<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
+                        <div class="accordion-header text-gray-800 font-bold">5x20 All the BEST!! 1999-2019<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=5x10/truth" class="text-blue-link">truth</a></li>
@@ -49,7 +51,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold">untitled<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
+                        <div class="accordion-header text-gray-800 font-bold">untitled<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=untitled/tsunagu" class="text-blue-link">Tsunagu</a></li>
@@ -57,7 +59,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold">Tsunagu<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
+                        <div class="accordion-header text-gray-800 font-bold">Tsunagu<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=untitled/tsunagu" class="text-blue-link">Tsunagu</a></li>
@@ -65,7 +67,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold">Japonism<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
+                        <div class="accordion-header text-gray-800 font-bold">Japonism<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku"
@@ -75,7 +77,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold">Boku no Miteiru Fuukei<span class="arrow"><caret-icon-component></caret-icon-component></span>
+                        <div class="accordion-header text-gray-800 font-bold">Boku no Miteiru Fuukei<span class="arrow"><caret-icon-component></caret-icon-component></span>
                         </div>
                         <div class="accordion-content">
                             <ul>
@@ -85,7 +87,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold">5x10 All the BEST!
+                        <div class="accordion-header text-gray-800 font-bold">5x10 All the BEST!
                             1999-2009<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
@@ -94,7 +96,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold">truth/Kaze no mukou e<span class="arrow"><caret-icon-component></caret-icon-component></span>
+                        <div class="accordion-header text-gray-800 font-bold">truth/Kaze no mukou e<span class="arrow"><caret-icon-component></caret-icon-component></span>
                         </div>
                         <div class="accordion-content">
                             <ul>
@@ -105,7 +107,7 @@
                 </div>
                 <div id="alphabetical-list" hidden>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold">B<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
+                        <div class="accordion-header text-gray-800 font-bold">B<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku"
@@ -115,7 +117,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold">M<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
+                        <div class="accordion-header text-gray-800 font-bold">M<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo"
@@ -124,7 +126,7 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-blue-secondary font-bold">T<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
+                        <div class="accordion-header text-gray-800 font-bold">T<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=5x10/truth" class="text-blue-link">truth</a></li>
@@ -134,6 +136,8 @@
                     </div>
                 </div>
             </div>
+            <hr class="w-2/3 mx-auto my-8" />
+            <div class="flex justify-center"><a href="/" class="bg-blue-secondary text-white py-2 px-4 rounded-full hover:bg-blue-back hover:text-black"><house-icon-component class="mr-2"></house-icon-component>Volver a inicio</a></div>
         </div>
     </main>
     <footer-component></footer-component>
