--- a/site/list.html
+++ b/site/list.html
@@ -137,7 +137,7 @@
                 </div>
             </div>
             <hr class="w-2/3 mx-auto my-8" />
-            <div class="flex justify-center"><a href="/" class="bg-blue-secondary text-white py-2 px-4 rounded-full hover:bg-blue-back hover:text-black"><house-icon-component class="mr-2"></house-icon-component>Volver a inicio</a></div>
+            <div class="flex justify-center"><a href="/" class="bg-blue-secondary text-white py-2 px-4 rounded-full hover:bg-blue-link"><house-icon-component class="mr-2"></house-icon-component>Volver a inicio</a></div>
         </div>
     </main>
     <footer-component></footer-component>
