Add links for better navigation

--- a/site/index.html
+++ b/site/index.html
@@ -51,6 +51,7 @@
         <a href="/lyrics.html?song=5x10/truth" class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer más</a>
       </div>
     </div>
+     <div class="flex justify-center"><a href="/list.html" class="bg-blue-secondary text-white pt-1 pb-2 px-4 rounded-full hover:bg-blue-link"><span class="align-middle">Todas las letras</span></a></div>
   </main>
 
   <footer-component></footer-component>
