--- a/site/list.html
+++ b/site/list.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listado de letras y traducciones | Arashi no naka de</title>
+    <title>Todas las letras y traducciones | Arashi no naka de</title>
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="text/javascript" src="/scripts/tailwind-config.js"></script>
@@ -22,7 +22,7 @@
     <header-component></header-component>
     <main class="max-w-6xl mx-auto pb-6 pt-3">
         <div class="bg-white p-6 md:p-12 rounded-lg shadow-sm">
-            <h2 class="post-title text-2xl md:text-3xl">Listado de letras y traducciones</h2>
+            <h2 class="post-title text-2xl md:text-3xl">Todas las letras y traducciones</h2>
             <div class="post-body pt-7">
                 <div class="img-container">
                     <img src="/images/arashi.jpg" alt="Arashi" class="md:max-w-[80%] mx-auto">
@@ -137,7 +137,7 @@
                 </div>
             </div>
             <hr class="w-2/3 mx-auto my-8" />
-            <div class="flex justify-center"><a href="/" class="bg-blue-secondary text-white py-2 px-4 rounded-full hover:bg-blue-link"><house-icon-component class="mr-2"></house-icon-component>Volver a inicio</a></div>
+            <div class="flex justify-center"><a href="/" class="bg-blue-secondary text-white pt-1 pb-2 px-4 rounded-full hover:bg-blue-link"><house-icon-component class="mr-2"></house-icon-component><span class="align-middle">Volver a Inicio</span></a></div>
         </div>
     </main>
     <footer-component></footer-component>
