--- a/site/lyrics.html
+++ b/site/lyrics.html
@@ -1,35 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
-    <title></title>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script type="text/javascript" src="/scripts/tailwind-config.js"></script>
 
-    <script type="module" src="/components/header/header-component.js"></script>
-    <script type="module" src="/components/footer/footer-component.js"></script>
-    <script type="text/javascript" src="/scripts/lyrics.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="noindex, nofollow">
+  <title></title>
+  <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script type="text/javascript" src="/scripts/tailwind-config.js"></script>
 
-  </head>
-  <body class="text-gray-800 font-sans">
-    <header-component></header-component>
-    <main class="max-w-6xl mx-auto pb-6 pt-3">
-      <div class="bg-white p-6 md:p-12 rounded-lg shadow-sm">
-        <h2 class="post-title text-2xl md:text-3xl"></h2>
+  <script type="module" src="/components/header/header-component.js"></script>
+  <script type="module" src="/components/footer/footer-component.js"></script>
+  <script type="module" src="/components/house-icon/house-icon-component.js"></script>
+  <script type="module" src="/components/file-icon/file-icon-component.js"></script>
+  <script type="text/javascript" src="/scripts/lyrics.js"></script>
 
-        <div class="post-body pt-7">
-          <div class="intro pb-5"></div>
-          <hr class="w-2/3 mx-auto my-5" />
-          <div class="content py-3 text-center">Cargando...</div>
-          <hr class="w-2/3 mx-auto my-5" />
-          <div class="info pt-5"></div>
-          <div class="credits"></div>
-        </div>
+</head>
+
+<body class="text-gray-800 font-sans">
+  <header-component></header-component>
+  <main class="max-w-6xl mx-auto pb-6 pt-3">
+    <div class="bg-white p-6 md:p-12 rounded-lg shadow-sm">
+      <h2 class="post-title text-2xl md:text-3xl"></h2>
+
+      <div class="post-body pt-7">
+        <div class="intro pb-5"></div>
+        <hr class="w-2/3 mx-auto my-5" />
+        <div class="content py-3 text-center">Cargando...</div>
+        <hr class="w-2/3 mx-auto my-5" />
+        <div class="info pt-5"></div>
+        <div class="credits"></div>
+
       </div>
-    </main>
-    <footer-component></footer-component>
-  </body>
+      <hr class="w-2/3 mx-auto my-8" />
+      <div class="flex justify-evenly">
+        <a href="/"
+          class="bg-blue-secondary text-white pt-1 pb-2 px-4 rounded-full hover:bg-blue-link"><house-icon-component
+            class="mr-2"></house-icon-component><span class="align-middle">Volver a Inicio</span></a>
+        <a href="/list.html"
+          class="bg-blue-secondary text-white pt-1 pb-2 px-4 rounded-full hover:bg-blue-link"><file-icon-component
+            class="mr-2"></file-icon-component><span class="align-middle">Todas las letras</span></a>
+      </div>
+    </div>
+  </main>
+  <footer-component></footer-component>
+</body>
+
 </html>
