--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,54 +8,77 @@
   <link rel="stylesheet" href="style.css">
 
   <script src="https://cdn.tailwindcss.com"></script>
-  <script type="text/javascript" src="/scripts/tailwind-config.js"></script>
+  <script type="text/javascript" src="/scripts/tailwind-config.js?v="></script>
   <script type="module" src="/components/header/header-component.js"></script>
   <script type="module" src="/components/footer/footer-component.js"></script>
+  <script type="module" src="/components/file-icon/file-icon-component.js"></script>
+
 </head>
+
 <body class="text-gray-800 font-sans">
 
- <header-component></header-component>
+  <header-component></header-component>
   <main class="max-w-3xl mx-auto pb-6 pt-3">
     <div class="min-h-[200px] max-h-[400px] p-6 md:p-8 bg-white rounded-lg shadow-sm mb-5">
-      <h3 class="post-title text-2xl md:text-3xl"><a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo">[Letra] Arashi - Mukae ni iku yo</a></h3>
+      <h3 class="post-title text-2xl md:text-3xl"><a
+          href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo">[Letra] Arashi - Mukae ni iku yo</a></h3>
       <div class=" flex justify-center items-center h-24">
-        <p class="italic"><a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo">«Aunque no entendamos la lógica, mientras haya un camino en el que seguir, vivámoslo tal como es y continuemos.»</a></p>
+        <p class="italic"><a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo">«Aunque no entendamos la
+            lógica, mientras haya un camino en el que seguir, vivámoslo tal como es y continuemos.»</a></p>
       </div>
       <div class="flex justify-end">
-        <a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo" class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer más</a>
+        <a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo"
+          class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer
+          más</a>
       </div>
     </div>
     <div class="min-h-[200px] max-h-[400px] p-6 md:p-8 bg-white rounded-lg shadow-sm mb-5">
-      <h3 class="post-title text-2xl md:text-3xl"><a href="/lyrics.html?song=untitled/tsunagu">[Letra] Arashi - Tsunagu</a></h3>
+      <h3 class="post-title text-2xl md:text-3xl"><a href="/lyrics.html?song=untitled/tsunagu">[Letra] Arashi -
+          Tsunagu</a></h3>
       <div class=" flex justify-center items-center h-24">
-        <p class="italic"><a href="/lyrics.html?song=untitled/tsunagu">«Cuanto más lo persigues, más te duele, no puedes fingir que no lo sabes.»</a></p>
+        <p class="italic"><a href="/lyrics.html?song=untitled/tsunagu">«Cuanto más lo persigues, más te duele, no puedes
+            fingir que no lo sabes.»</a></p>
       </div>
       <div class="flex justify-end">
-        <a href="/lyrics.html?song=untitled/tsunagu" class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer más</a>
+        <a href="/lyrics.html?song=untitled/tsunagu"
+          class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer
+          más</a>
       </div>
     </div>
     <div class="min-h-[200px] max-h-[400px] p-6 md:p-8 bg-white rounded-lg shadow-sm mb-5">
-      <h3 class="post-title text-2xl md:text-3xl"><a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku">[Letra] Arashi - Bokura ga tsunaideiku</a></h3>
+      <h3 class="post-title text-2xl md:text-3xl"><a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku">[Letra]
+          Arashi - Bokura ga tsunaideiku</a></h3>
       <div class=" flex justify-center items-center h-24">
-        <p class="italic"><a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku">«Las épocas cambian, el tiempo pasa y, aunque persigamos un mañana distinto, sin duda algún día volveremos a este camino.»</a></p>
+        <p class="italic"><a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku">«Las épocas cambian, el tiempo pasa
+            y, aunque persigamos un mañana distinto, sin duda algún día volveremos a este camino.»</a></p>
       </div>
       <div class="flex justify-end">
-        <a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku" class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer más</a>
+        <a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku"
+          class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer
+          más</a>
       </div>
     </div>
     <div class="min-h-[200px] max-h-[400px] p-6 md:p-8 bg-white rounded-lg shadow-sm mb-5">
       <h3 class="post-title text-2xl md:text-3xl"><a href="/lyrics.html?song=5x10/truth">[Letra] Arashi - truth</a></h3>
       <div class=" flex justify-center items-center h-24">
-        <p class="italic"><a href="/lyrics.html?song=5x10/truth">«Esta es la verdad que desaparece como una mentira...»</a></p>
+        <p class="italic"><a href="/lyrics.html?song=5x10/truth">«Esta es la verdad que desaparece como una
+            mentira...»</a></p>
       </div>
       <div class="flex justify-end">
-        <a href="/lyrics.html?song=5x10/truth" class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer más</a>
+        <a href="/lyrics.html?song=5x10/truth"
+          class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer
+          más</a>
       </div>
     </div>
-     <div class="flex justify-center"><a href="/list.html" class="bg-blue-secondary text-white pt-1 pb-2 px-4 rounded-full hover:bg-blue-link"><span class="align-middle">Todas las letras</span></a></div>
+    <div class="flex justify-center">
+      <a href="/list.html"
+        class="bg-blue-secondary text-white pt-1 pb-2 px-4 rounded-full hover:bg-blue-link"><file-icon-component
+          class="mr-2"></file-icon-component><span class="align-middle">Todas las letras</span></a>
+    </div>
   </main>
 
   <footer-component></footer-component>
 
 </body>
+
 </html>
