Add "together, forever"

--- a/site/list.html
+++ b/site/list.html
@@ -76,6 +76,16 @@
                             </ul>
                         </div>
                     </div>
+                     <div class="accordion mb-4">
+                        <div class="accordion-header text-gray-800 font-bold">Meikyuu Love Song<span class="arrow"><caret-icon-component></caret-icon-component></span>
+                        </div>
+                        <div class="accordion-content">
+                            <ul>
+                                <li><a href="/lyrics.html?song=meikyuu_love_song/together_forever"
+                                        class="text-blue-link">together, forever</a></li>
+                            </ul>
+                        </div>
+                    </div>
                     <div class="accordion mb-4">
                         <div class="accordion-header text-gray-800 font-bold">Boku no Miteiru Fuukei<span class="arrow"><caret-icon-component></caret-icon-component></span>
                         </div>
@@ -129,6 +139,7 @@
                         <div class="accordion-header text-gray-800 font-bold">T<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
+                                <li><a href="/lyrics.html?song=meikyuu_love_song/together_forever" class="text-blue-link">together, forever</a></li>
                                 <li><a href="/lyrics.html?song=5x10/truth" class="text-blue-link">truth</a></li>
                                 <li><a href="/lyrics.html?song=untitled/tsunagu" class="text-blue-link">Tsunagu</a></li>
                             </ul>
