--- a/site/index.html
+++ b/site/index.html
@@ -21,6 +21,18 @@
   <main class="max-w-3xl mx-auto pb-6 pt-3">
     <div class="min-h-[200px] max-h-[400px] p-6 md:p-8 bg-white rounded-lg shadow-sm mb-5">
       <h3 class="post-title text-2xl md:text-3xl"><a
+          href="/lyrics.html?song=meikyuu_love_song/together_forever">[Letra] Arashi - together, forever</a></h3>
+      <div class=" flex justify-center items-center h-24">
+        <p class="italic"><a href="/lyrics.html?song=meikyuu_love_song/together_forever">«Las palabras no bastan para explicar todo lo que vi junto a ti.»</a></p>
+      </div>
+      <div class="flex justify-end">
+        <a href="/lyrics.html?song=meikyuu_love_song/together_forever"
+          class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer
+          más</a>
+      </div>
+    </div>
+    <div class="min-h-[200px] max-h-[400px] p-6 md:p-8 bg-white rounded-lg shadow-sm mb-5">
+      <h3 class="post-title text-2xl md:text-3xl"><a
           href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo">[Letra] Arashi - Mukae ni iku yo</a></h3>
       <div class=" flex justify-center items-center h-24">
         <p class="italic"><a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo">«Aunque no entendamos la
