Link to index.html

--- a/site/list.html
+++ b/site/list.html
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <hr class="w-2/3 mx-auto my-8" />
-            <div class="flex justify-center"><a href="/" class="bg-blue-secondary text-white pt-1 pb-2 px-4 rounded-full hover:bg-blue-link"><house-icon-component class="mr-2"></house-icon-component><span class="align-middle">Volver a Inicio</span></a></div>
+            <div class="flex justify-center"><a href="/index.html" class="bg-blue-secondary text-white pt-1 pb-2 px-4 rounded-full hover:bg-blue-link"><house-icon-component class="mr-2"></house-icon-component><span class="align-middle">Volver a Inicio</span></a></div>
         </div>
     </main>
     <footer-component></footer-component>
