--- a/site/lyrics.html
+++ b/site/lyrics.html
@@ -34,7 +34,7 @@
       </div>
       <hr class="w-2/3 mx-auto my-8" />
       <div class="flex justify-evenly">
-        <a href="/"
+        <a href="/index.html"
           class="bg-blue-secondary text-white pt-1 pb-2 px-4 rounded-full hover:bg-blue-link"><house-icon-component
             class="mr-2"></house-icon-component><span class="align-middle">Volver a Inicio</span></a>
         <a href="/list.html"
