Motto, ima yori

--- a/site/index.html
+++ b/site/index.html
@@ -20,10 +20,23 @@
   <header-component></header-component>
   <main class="max-w-3xl mx-auto pb-6 pt-3">
     <div class="min-h-[200px] max-h-[400px] p-6 md:p-8 bg-white rounded-lg shadow-sm mb-5">
-      <h3 class="post-title text-2xl md:text-3xl"><a
-          href="/lyrics.html?song=meikyuu_love_song/together_forever">[Letra] Arashi - together, forever</a></h3>
+      <h3 class="post-title text-2xl md:text-3xl"><a href="/lyrics.html?song=bittersweet/motto_ima_yori">[Letra]
+          Arashi - Motto, ima yori</a></h3>
       <div class=" flex justify-center items-center h-24">
-        <p class="italic"><a href="/lyrics.html?song=meikyuu_love_song/together_forever">«Las palabras no bastan para explicar todo lo que vi junto a ti.»</a></p>
+        <p class="italic"><a href="/lyrics.html?song=bittersweet/motto_ima_yori">«En este tiempo efímero lo único que es seguro es que estoy aquí.»</a></p>
+      </div>
+      <div class="flex justify-end">
+        <a href="/lyrics.html?song=bittersweet/motto_ima_yori"
+          class="bg-transparent text-blue-secondary hover:bg-blue-back px-4 py-2 rounded-lg transition font-bold">Leer
+          más</a>
+      </div>
+    </div>
+    <div class="min-h-[200px] max-h-[400px] p-6 md:p-8 bg-white rounded-lg shadow-sm mb-5">
+      <h3 class="post-title text-2xl md:text-3xl"><a href="/lyrics.html?song=meikyuu_love_song/together_forever">[Letra]
+          Arashi - together, forever</a></h3>
+      <div class=" flex justify-center items-center h-24">
+        <p class="italic"><a href="/lyrics.html?song=meikyuu_love_song/together_forever">«Las palabras no bastan para
+            explicar todo lo que vi junto a ti.»</a></p>
       </div>
       <div class="flex justify-end">
         <a href="/lyrics.html?song=meikyuu_love_song/together_forever"
