--- a/site/list.html
+++ b/site/list.html
@@ -42,7 +42,8 @@
                 </div>
                 <div id="by-album-list">
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-gray-800 font-bold">5x20 All the BEST!! 1999-2019<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
+                        <div class="accordion-header text-gray-800 font-bold">5x20 All the BEST!! 1999-2019<span
+                                class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=5x10/truth" class="text-blue-link">truth</a></li>
@@ -51,7 +52,8 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-gray-800 font-bold">untitled<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
+                        <div class="accordion-header text-gray-800 font-bold">untitled<span
+                                class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=untitled/tsunagu" class="text-blue-link">Tsunagu</a></li>
@@ -59,7 +61,8 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-gray-800 font-bold">Tsunagu<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
+                        <div class="accordion-header text-gray-800 font-bold">Tsunagu<span
+                                class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=untitled/tsunagu" class="text-blue-link">Tsunagu</a></li>
@@ -67,7 +70,8 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-gray-800 font-bold">Japonism<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
+                        <div class="accordion-header text-gray-800 font-bold">Japonism<span
+                                class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku"
@@ -76,8 +80,20 @@
                             </ul>
                         </div>
                     </div>
-                     <div class="accordion mb-4">
-                        <div class="accordion-header text-gray-800 font-bold">Meikyuu Love Song<span class="arrow"><caret-icon-component></caret-icon-component></span>
+                       <div class="accordion mb-4">
+                        <div class="accordion-header text-gray-800 font-bold">Bittersweet<span
+                                class="arrow"><caret-icon-component></caret-icon-component></span>
+                        </div>
+                        <div class="accordion-content">
+                            <ul>
+                                <li><a href="/lyrics.html?song=bittersweet/motto_ima_yori"
+                                        class="text-blue-link">Motto, ima yori</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="accordion mb-4">
+                        <div class="accordion-header text-gray-800 font-bold">Meikyuu Love Song<span
+                                class="arrow"><caret-icon-component></caret-icon-component></span>
                         </div>
                         <div class="accordion-content">
                             <ul>
@@ -87,7 +103,8 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-gray-800 font-bold">Boku no Miteiru Fuukei<span class="arrow"><caret-icon-component></caret-icon-component></span>
+                        <div class="accordion-header text-gray-800 font-bold">Boku no Miteiru Fuukei<span
+                                class="arrow"><caret-icon-component></caret-icon-component></span>
                         </div>
                         <div class="accordion-content">
                             <ul>
@@ -106,7 +123,8 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-gray-800 font-bold">truth/Kaze no mukou e<span class="arrow"><caret-icon-component></caret-icon-component></span>
+                        <div class="accordion-header text-gray-800 font-bold">truth/Kaze no mukou e<span
+                                class="arrow"><caret-icon-component></caret-icon-component></span>
                         </div>
                         <div class="accordion-content">
                             <ul>
@@ -117,7 +135,8 @@
                 </div>
                 <div id="alphabetical-list" hidden>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-gray-800 font-bold">B<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
+                        <div class="accordion-header text-gray-800 font-bold">B<span
+                                class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
                                 <li><a href="/lyrics.html?song=japonism/bokura_ga_tsunaideiku"
@@ -127,8 +146,13 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-gray-800 font-bold">M<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
+                        <div class="accordion-header text-gray-800 font-bold">M<span
+                                class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
+                            <ul>
+                                <li><a href="/lyrics.html?song=bittersweet/motto_ima_yori"
+                                        class="text-blue-link">Motto, ima yori</a></li>
+                            </ul>
                             <ul>
                                 <li><a href="/lyrics.html?song=boku_no_miteiru_fuukei/mukae_ni_iku_yo"
                                         class="text-blue-link">Mukae ni iku yo</a></li>
@@ -136,10 +160,12 @@
                         </div>
                     </div>
                     <div class="accordion mb-4">
-                        <div class="accordion-header text-gray-800 font-bold">T<span class="arrow"><caret-icon-component></caret-icon-component></span></div>
+                        <div class="accordion-header text-gray-800 font-bold">T<span
+                                class="arrow"><caret-icon-component></caret-icon-component></span></div>
                         <div class="accordion-content">
                             <ul>
-                                <li><a href="/lyrics.html?song=meikyuu_love_song/together_forever" class="text-blue-link">together, forever</a></li>
+                                <li><a href="/lyrics.html?song=meikyuu_love_song/together_forever"
+                                        class="text-blue-link">together, forever</a></li>
                                 <li><a href="/lyrics.html?song=5x10/truth" class="text-blue-link">truth</a></li>
                                 <li><a href="/lyrics.html?song=untitled/tsunagu" class="text-blue-link">Tsunagu</a></li>
                             </ul>
@@ -148,7 +174,9 @@
                 </div>
             </div>
             <hr class="w-2/3 mx-auto my-8" />
-            <div class="flex justify-center"><a href="/" class="bg-blue-secondary text-white pt-1 pb-2 px-4 rounded-full hover:bg-blue-link"><house-icon-component class="mr-2"></house-icon-component><span class="align-middle">Volver a Inicio</span></a></div>
+            <div class="flex justify-center"><a href="/"
+                    class="bg-blue-secondary text-white pt-1 pb-2 px-4 rounded-full hover:bg-blue-link"><house-icon-component
+                        class="mr-2"></house-icon-component><span class="align-middle">Volver a Inicio</span></a></div>
         </div>
     </main>
     <footer-component></footer-component>
