--- a/site/index.html
+++ b/site/index.html
@@ -23,7 +23,8 @@
       <h3 class="post-title text-2xl md:text-3xl"><a href="/lyrics.html?song=bittersweet/motto_ima_yori">[Letra]
           Arashi - Motto, ima yori</a></h3>
       <div class=" flex justify-center items-center h-24">
-        <p class="italic"><a href="/lyrics.html?song=bittersweet/motto_ima_yori">«En este tiempo efímero lo único que es seguro es que estoy aquí.»</a></p>
+        <p class="italic"><a href="/lyrics.html?song=bittersweet/motto_ima_yori">«En este tiempo efímero lo único que es
+            seguro es que estoy aquí.»</a></p>
       </div>
       <div class="flex justify-end">
         <a href="/lyrics.html?song=bittersweet/motto_ima_yori"
